# top-down-shooter-test-project

./: CMakeLists.txt  GameManager.cpp  GameManager.h  README.md  config.h.in  config.ini  main.cpp
Backend/GameLogic/: CMakeLists.txt  Enemy.cpp  Enemy.h  GameEntites.h  GameLog.cpp  GameLog.h  GameObject.h  GameWorld.cpp  GameWorld.h  Level.h
Backend/GameLogic/Bodies/: Body.h  CollisionBody.cpp  CollisionBody.h  VisualBody.cpp  VisualBody.h
Backend/GameLogic/GameObjects/: Bullet.h  Enemy.h  GaneObjects.h  Player.h  Wall.h
Core/: CMakeLists.txt  Config.cpp  Config.h  Core.cpp  Core.h  CoreTypes.h  DrawObject.h  Input.h  Shapes.h  Util.h  core.cpp  core.h
Frontend/Graphics/: CMakeLists.txt  Graphics.cpp  Graphics.h  SFMLDrawer.cpp  SFMLDrawer.h
Frontend/Input/: CMakeLists.txt  InputManager.cpp  InputManager.h
Tests/: CMakeLists.txt  coreTests.h  gameTests.h  test-main.cpp
